auto publishing updates to notebooks

--- a/about.ipynb
+++ b/about.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "61aeb2b8",
+   "id": "59cb154e",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc343c08",
+   "id": "ab898b1c",
    "metadata": {},
    "source": [
     "# About\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91e63d31",
+   "id": "7268eeae",
    "metadata": {},
    "source": [
     "## What is JAX?\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "594c4ee6",
+   "id": "6e86740f",
    "metadata": {},
    "source": [
     "## How to run these lectures\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a8e8769",
+   "id": "38b9e0a7",
    "metadata": {},
    "source": [
     "## Credits\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abcdced6",
+   "id": "4f45c010",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -154,7 +154,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815079.249189,
+  "date": 1768362174.2900915,
   "filename": "about.md",
   "kernelspec": {
    "display_name": "Python",
