--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "23d6a6f7",
+   "id": "426c2179",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "719007c5",
+   "id": "6066b9ff",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78c6ded6",
+   "id": "0400213f",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd70f103",
+   "id": "a49ee284",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a08348e",
+   "id": "ebb5427f",
    "metadata": {},
    "source": [
     "### References\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c034466",
+   "id": "7d033459",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49007627",
+   "id": "6ce56fca",
    "metadata": {
     "hide-output": false
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a13e2fa",
+   "id": "5b9a78bd",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18bc096a",
+   "id": "492ada1d",
    "metadata": {
     "hide-output": false
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51e64cfc",
+   "id": "5b0fb4a7",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd30cc9c",
+   "id": "d5c474bc",
    "metadata": {
     "hide-output": false
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f2a37e7",
+   "id": "0a53c670",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fedb9ec5",
+   "id": "dfc8087f",
    "metadata": {
     "hide-output": false
    },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38d03522",
+   "id": "9a2629bd",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58c0856f",
+   "id": "294d7a60",
    "metadata": {
     "hide-output": false
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04e2583f",
+   "id": "4362b332",
    "metadata": {},
    "source": [
     "From the first-order condition with respect to capital, the firm’s inverse demand for capital is\n",
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "062c4554",
+   "id": "6ee96589",
    "metadata": {
     "hide-output": false
    },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8f1b245",
+   "id": "687bfe37",
    "metadata": {},
    "source": [
     "Using [(18.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9b1d6a8",
+   "id": "5ae4671d",
    "metadata": {
     "hide-output": false
    },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "713437b4",
+   "id": "4859b46a",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ef3570e",
+   "id": "b6f06dba",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0e3ebd9",
+   "id": "50917ecb",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dc3f986",
+   "id": "df24efd7",
    "metadata": {
     "hide-output": false
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c6a913b",
+   "id": "a601c835",
    "metadata": {},
    "source": [
     "For now we assume that $ u(c) = \\log(c) $.\n",
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88ce1ff1",
+   "id": "be275639",
    "metadata": {
     "hide-output": false
    },
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "625c0311",
+   "id": "3f534636",
    "metadata": {},
    "source": [
     "Here’s a tuple that stores the wage rate and interest rate, as well as a function that creates a price namedtuple with default values."
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71c5e67b",
+   "id": "46cab0a3",
    "metadata": {
     "hide-output": false
    },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36a0a088",
+   "id": "2b337ddd",
    "metadata": {},
    "source": [
     "Now we set up a vectorized version of the right-hand side of the Bellman equation\n",
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba8576b9",
+   "id": "605208a6",
    "metadata": {
     "hide-output": false
    },
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d8230d5",
+   "id": "558a7503",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea785011",
+   "id": "b5ea6364",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09c0fc73",
+   "id": "4fb97e4b",
    "metadata": {},
    "source": [
     "The following function computes the array $ r_{\\sigma} $ which gives current\n",
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a8f9e01",
+   "id": "71081812",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "014cb631",
+   "id": "8642a3a1",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a473c8",
+   "id": "52359532",
    "metadata": {
     "hide-output": false
    },
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef004ece",
+   "id": "aa4ea110",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e57cea0",
+   "id": "8c78d280",
    "metadata": {
     "hide-output": false
    },
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2b94a7b",
+   "id": "9f276ea7",
    "metadata": {},
    "source": [
     "Here’s the Howard policy iteration."
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9148e3b",
+   "id": "dcd1b206",
    "metadata": {
     "hide-output": false
    },
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5400ef21",
+   "id": "9f64c903",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a695a51",
+   "id": "4eb6f163",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80569552",
+   "id": "f00426c6",
    "metadata": {
     "hide-output": false
    },
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4cebec6",
+   "id": "33822062",
    "metadata": {
     "hide-output": false
    },
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cad1258e",
+   "id": "90e98346",
    "metadata": {
     "hide-output": false
    },
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2eaf2224",
+   "id": "c089f3ac",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb5661b4",
+   "id": "c9aa2290",
    "metadata": {
     "hide-output": false
    },
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51ab3ac8",
+   "id": "adf07066",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f18e0428",
+   "id": "0f356791",
    "metadata": {
     "hide-output": false
    },
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90c82b1a",
+   "id": "0ecd9e43",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38f3eef3",
+   "id": "9025d579",
    "metadata": {
     "hide-output": false
    },
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1581525b",
+   "id": "e22933de",
    "metadata": {
     "hide-output": false
    },
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da032bba",
+   "id": "30046c71",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85981296",
+   "id": "4c0521e8",
    "metadata": {
     "hide-output": false
    },
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "305d267f",
+   "id": "6269a783",
    "metadata": {},
    "source": [
     "The next function computes aggregate capital supply by households under policy $ \\sigma $, given wages and interest rates."
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff7873cd",
+   "id": "4a8d83b7",
    "metadata": {
     "hide-output": false
    },
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4df861e2",
+   "id": "771077c3",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "134bd309",
+   "id": "5e7c3999",
    "metadata": {
     "hide-output": false
    },
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd34c848",
+   "id": "eff76e7b",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d19851a1",
+   "id": "d9c14fb1",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "202f8350",
+   "id": "0483cb38",
    "metadata": {
     "hide-output": false
    },
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "151bb57b",
+   "id": "7284156a",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc3eae0e",
+   "id": "6fd8ea68",
    "metadata": {
     "hide-output": false
    },
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e8b2c0a",
+   "id": "27bcc741",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8da921a",
+   "id": "00c06a1d",
    "metadata": {},
    "source": [
     "This is not very fast, given how quickly we can solve the household problem.\n",
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47ea6611",
+   "id": "43796e20",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "347f622b",
+   "id": "48bf9967",
    "metadata": {},
    "source": [
     "## Exercise 18.1\n",
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4541bad0",
+   "id": "b408fe09",
    "metadata": {},
    "source": [
     "## Solution"
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb0e73e0",
+   "id": "1acf2c0a",
    "metadata": {
     "hide-output": false
    },
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7da1bd72",
+   "id": "b838b3aa",
    "metadata": {},
    "source": [
     "We use bisection to find the zero of the function $ h(k) = k - G(k) $."
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125ef337",
+   "id": "d1b07d76",
    "metadata": {
     "hide-output": false
    },
@@ -1137,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2fbf662",
+   "id": "29be6e3d",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df99263d",
+   "id": "4b2934fe",
    "metadata": {},
    "source": [
     "Bisection seems to be faster than the damped iteration scheme."
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac14a666",
+   "id": "9ff67de9",
    "metadata": {},
    "source": [
     "## Exercise 18.2\n",
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fc54d49",
+   "id": "21a1c7c7",
    "metadata": {
     "hide-output": false
    },
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c819eacf",
+   "id": "ed9b5e6e",
    "metadata": {},
    "source": [
     "## Solution"
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2cbbe02",
+   "id": "7d315866",
    "metadata": {
     "hide-output": false
    },
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59eb1840",
+   "id": "bdeac590",
    "metadata": {
     "hide-output": false
    },
@@ -1229,7 +1229,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815079.2870998,
+  "date": 1768362174.329335,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
