--- a/ifp_dl.ipynb
+++ b/ifp_dl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "230e057f",
+   "id": "e2754889",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f825409",
+   "id": "4c8834fe",
    "metadata": {},
    "source": [
     "# Policy Gradient-Based Optimal Savings"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b5813ae",
+   "id": "f78240b4",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa231436",
+   "id": "3b4e59cb",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfd4662c",
+   "id": "5d174f6f",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea6aa7ff",
+   "id": "6ec0d69b",
    "metadata": {},
    "source": [
     "We’ll use the following imports"
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03863e7f",
+   "id": "fcf21db2",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e26d0ed5",
+   "id": "57c86729",
    "metadata": {},
    "source": [
     "## Theory\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "784c6462",
+   "id": "a2e6471e",
    "metadata": {},
    "source": [
     "### Household problem\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7326aa2",
+   "id": "767ca4a2",
    "metadata": {},
    "source": [
     "### Lifetime Value and Optimization\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36fbd2da",
+   "id": "9eba34e3",
    "metadata": {},
    "source": [
     "### The policy gradient approach\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f362035",
+   "id": "267917c4",
    "metadata": {},
    "source": [
     "## Network\n",
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90483357",
+   "id": "1f3aa5ae",
    "metadata": {
     "hide-output": false
    },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac80eb84",
+   "id": "3e6f5167",
    "metadata": {},
    "source": [
     "We use a class called `LayerParams` to store parameters representing a single\n",
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a58ed87",
+   "id": "b0d46cf0",
    "metadata": {
     "hide-output": false
    },
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8b0f237",
+   "id": "4ebad31e",
    "metadata": {},
    "source": [
     "The following function initializes a single layer of the network using Le Cun\n",
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95ae6004",
+   "id": "c86f5f9e",
    "metadata": {
     "hide-output": false
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01a40128",
+   "id": "de9120ff",
    "metadata": {},
    "source": [
     "The next function builds an entire network, as represented by its parameters, by\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a525c79d",
+   "id": "b05da500",
    "metadata": {
     "hide-output": false
    },
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f4bd65",
+   "id": "548af3c9",
    "metadata": {},
    "source": [
     "Next we write a function to train the network by gradient *descent*, given a generic loss\n",
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c27073e4",
+   "id": "fb6067b0",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d238690",
+   "id": "86801b5a",
    "metadata": {},
    "source": [
     "## Cake Eating Case\n",
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bdea103",
+   "id": "113cd4c0",
    "metadata": {},
    "source": [
     "### Cake eating loss function\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "862ac579",
+   "id": "99529552",
    "metadata": {
     "hide-output": false
    },
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18fda97d",
+   "id": "3d1563d7",
    "metadata": {},
    "source": [
     "We use CRRA utility."
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4e06d66",
+   "id": "b87681be",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01dbecd6",
+   "id": "7269687a",
    "metadata": {},
    "source": [
     "Now we provide a function that implements a consumption policy as a neural network, given the\n",
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b72fa96f",
+   "id": "9f47fe0e",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d85809f7",
+   "id": "7c27262e",
    "metadata": {},
    "source": [
     "The next function approximates lifetime value for the cake eating agent\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bcdb442",
+   "id": "b9f4941e",
    "metadata": {
     "hide-output": false
    },
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f4cae6d",
+   "id": "25f8a3b6",
    "metadata": {},
    "source": [
     "Here’s the loss function we will minimize."
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2362bf5f",
+   "id": "a0720fdc",
    "metadata": {
     "hide-output": false
    },
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e84345cd",
+   "id": "738e154c",
    "metadata": {},
    "source": [
     "### Train and solve\n",
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f04c0b3e",
+   "id": "d972ce5d",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d2a3c68",
+   "id": "2659d456",
    "metadata": {},
    "source": [
     "We test stability."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f8c6780",
+   "id": "3f866cd4",
    "metadata": {
     "hide-output": false
    },
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7d9ab24",
+   "id": "b53b7db6",
    "metadata": {},
    "source": [
     "We compute the optimal consumption rate and lifetime value from the analytical\n",
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbf99708",
+   "id": "5e4c9643",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9ffffc1",
+   "id": "badcb3d2",
    "metadata": {},
    "source": [
     "Now let’s train the network."
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94ef46fa",
+   "id": "61392a66",
    "metadata": {
     "hide-output": false
    },
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58cef37d",
+   "id": "e37a291c",
    "metadata": {},
    "source": [
     "First we plot the evolution of lifetime value over the epochs."
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd9c175d",
+   "id": "e18f75db",
    "metadata": {
     "hide-output": false
    },
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7952c0e",
+   "id": "1ba79367",
    "metadata": {},
    "source": [
     "Next we compare the learned and optimal policies."
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6106c94a",
+   "id": "25f31627",
    "metadata": {
     "hide-output": false
    },
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bde6ae1e",
+   "id": "3c1309e2",
    "metadata": {},
    "source": [
     "### Simulation\n",
@@ -887,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6609e33",
+   "id": "6453b025",
    "metadata": {
     "hide-output": false
    },
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c07df2e",
+   "id": "cd6c1324",
    "metadata": {},
    "source": [
     "Let’s simulate and plot path"
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26a01a77",
+   "id": "8f1d0e7d",
    "metadata": {
     "hide-output": false
    },
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3f99c5b",
+   "id": "e22849c3",
    "metadata": {},
    "source": [
     "## IFP Model\n",
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01ca35ca",
+   "id": "5b0becd1",
    "metadata": {},
    "source": [
     "### JAX Implementation\n",
@@ -989,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84048622",
+   "id": "65ae6c19",
    "metadata": {
     "hide-output": false
    },
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7634f443",
+   "id": "15e24706",
    "metadata": {},
    "source": [
     "### Solving the IID model using the EGM\n",
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1005d95e",
+   "id": "65245e11",
    "metadata": {
     "hide-output": false
    },
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d67568db",
+   "id": "1028dc47",
    "metadata": {},
    "source": [
     "Here’s the solver using time iteration:"
@@ -1106,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02dff878",
+   "id": "70df41cb",
    "metadata": {
     "hide-output": false
    },
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf934e1e",
+   "id": "91ae27dc",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the optimal policy:"
@@ -1156,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a309d445",
+   "id": "e3ab13a9",
    "metadata": {
     "hide-output": false
    },
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cef533e2",
+   "id": "28c2b605",
    "metadata": {},
    "source": [
     "Plot the optimal consumption policy:"
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c979804",
+   "id": "7c4b2118",
    "metadata": {
     "hide-output": false
    },
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3c9a95a",
+   "id": "6fc4019c",
    "metadata": {},
    "source": [
     "### Solving the IID model with DL\n",
@@ -1220,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79eb58df",
+   "id": "8bd0c815",
    "metadata": {
     "hide-output": false
    },
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ca2230d",
+   "id": "c7d14fb6",
    "metadata": {},
    "source": [
     "The loss function is the negation of the expected lifetime value."
@@ -1284,7 +1284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3dca0a8",
+   "id": "762bc2cf",
    "metadata": {
     "hide-output": false
    },
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20b9541b",
+   "id": "e8518284",
    "metadata": {},
    "source": [
     "Now let’s set up and train the network.\n",
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da263f8a",
+   "id": "eb5e9478",
    "metadata": {
     "hide-output": false
    },
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e210338",
+   "id": "38f52fd8",
    "metadata": {},
    "source": [
     "Plot the learning progress."
@@ -1352,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44349cb0",
+   "id": "f2361cad",
    "metadata": {
     "hide-output": false
    },
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36e134c0",
+   "id": "80376174",
    "metadata": {},
    "source": [
     "Compare EGM and DL solutions."
@@ -1377,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74b30a63",
+   "id": "3a736ee2",
    "metadata": {
     "hide-output": false
    },
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "218328c0",
+   "id": "dad51fad",
    "metadata": {},
    "source": [
     "The fit is quite good."
@@ -1409,7 +1409,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815079.5418136,
+  "date": 1768362174.5879796,
   "filename": "ifp_dl.md",
   "kernelspec": {
    "display_name": "Python",
