--- a/inventory_ssd.ipynb
+++ b/inventory_ssd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c6d5dd33",
+   "id": "b0e3c99a",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66a8554b",
+   "id": "b200ae67",
    "metadata": {},
    "source": [
     "# Inventory Management Model"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bda7b72e",
+   "id": "855451d9",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3234f6ff",
+   "id": "68fc3d1f",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f88c03b8",
+   "id": "57cb42ab",
    "metadata": {},
    "source": [
     "## A model with constant discounting\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9537676",
+   "id": "e5c94979",
    "metadata": {},
    "source": [
     "## Time varing discount rates\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4dbfebe",
+   "id": "f037660c",
    "metadata": {
     "hide-output": false
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93e95d41",
+   "id": "c84c46f8",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfc65594",
+   "id": "8f0c49e6",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a087efd1",
+   "id": "9b08d47a",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7b373a1",
+   "id": "d9d6f090",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "144c1ad2",
+   "id": "7cb9362c",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the inventory management."
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab1add96",
+   "id": "daf6363e",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6df8024e",
+   "id": "a266c1b3",
    "metadata": {
     "hide-output": false
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a823f1b7",
+   "id": "1bc4ce27",
    "metadata": {},
    "source": [
     "Here’s the function `B` on the right-hand side of the Bellman equation."
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dc82d30",
+   "id": "31bdf4a5",
    "metadata": {
     "hide-output": false
    },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78b32b57",
+   "id": "d88b8153",
    "metadata": {},
    "source": [
     "We need to vectorize this function so that we can use it efficiently in JAX.\n",
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1ffb0de",
+   "id": "3382d829",
    "metadata": {
     "hide-output": false
    },
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb0c0b7",
+   "id": "f2960a29",
    "metadata": {},
    "source": [
     "Next we define the Bellman operator."
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10c2124c",
+   "id": "e6892573",
    "metadata": {
     "hide-output": false
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ee2a0d2",
+   "id": "f60fa168",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd8797cf",
+   "id": "04a3531d",
    "metadata": {
     "hide-output": false
    },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e90e665",
+   "id": "d2fc1ac5",
    "metadata": {},
    "source": [
     "Here’s code to solve the model using value function iteration."
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16529b07",
+   "id": "0c12e427",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cf04d6c",
+   "id": "3403d878",
    "metadata": {},
    "source": [
     "Now let’s create an instance and solve it."
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9ebff35",
+   "id": "6ed63b00",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1b9152e",
+   "id": "19ddb6b2",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66c93fa0",
+   "id": "15c8af95",
    "metadata": {},
    "source": [
     "Let’s run again to get rid of the compile time."
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f27e260e",
+   "id": "b0d14059",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20cb221c",
+   "id": "7ab2110e",
    "metadata": {},
    "source": [
     "Now let’s do a simulation.\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "381e09eb",
+   "id": "8949cd54",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61beef24",
+   "id": "eaf2b4cd",
    "metadata": {},
    "source": [
     "Here’s code to simulate inventories"
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "560679ec",
+   "id": "53fb4e7e",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55ea6c02",
+   "id": "0c62784d",
    "metadata": {},
    "source": [
     "Here’s code to generate a plot."
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ddbc68b",
+   "id": "7904db22",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44471ad6",
+   "id": "6f81ee0e",
    "metadata": {},
    "source": [
     "Let’s take a look."
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8205063",
+   "id": "a0caa4ac",
    "metadata": {
     "hide-output": false
    },
@@ -685,7 +685,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815079.6299,
+  "date": 1768362174.6733766,
   "filename": "inventory_ssd.md",
   "kernelspec": {
    "display_name": "Python",
