--- a/keras.ipynb
+++ b/keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "03816971",
+   "id": "40f34be7",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26c05d88",
+   "id": "085318a0",
    "metadata": {},
    "source": [
     "# Simple Neural Network Regression with Keras and JAX"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b964b76",
+   "id": "f927de5c",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7dc331e",
+   "id": "ba2db321",
    "metadata": {
     "hide-output": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ade4e728",
+   "id": "bc3492ee",
    "metadata": {},
    "source": [
     "Let’s install Keras."
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7a1f1d6",
+   "id": "7cb1cc6b",
    "metadata": {
     "hide-output": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d1ac15d",
+   "id": "7a34beb6",
    "metadata": {},
    "source": [
     "Now we specify that the desired backend is JAX."
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f70e25ad",
+   "id": "3acce26a",
    "metadata": {
     "hide-output": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d16b9e5",
+   "id": "b7dfb6a7",
    "metadata": {},
    "source": [
     "Now we should be able to import some tools from Keras.\n",
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15035570",
+   "id": "2dabdbaa",
    "metadata": {
     "hide-output": false
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80ba48c4",
+   "id": "f8c99630",
    "metadata": {},
    "source": [
     "## Data\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27067d9d",
+   "id": "9f0091e0",
    "metadata": {
     "hide-output": false
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aee7ee0f",
+   "id": "3db47ba9",
    "metadata": {},
    "source": [
     "Now we generate some data to train the model."
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6c7a631",
+   "id": "8614918b",
    "metadata": {
     "hide-output": false
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "243599f6",
+   "id": "573984ec",
    "metadata": {},
    "source": [
     "Here’s a plot of the training data."
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d50da27e",
+   "id": "34e7908d",
    "metadata": {
     "hide-output": false
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfda55d0",
+   "id": "d81fc722",
    "metadata": {},
    "source": [
     "We’ll also use data from the same process for cross-validation."
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da2a0902",
+   "id": "1704478b",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "726a1b06",
+   "id": "ec12a83e",
    "metadata": {},
    "source": [
     "## Models\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e90e1b1",
+   "id": "738ed1d9",
    "metadata": {},
    "source": [
     "## Regression model\n",
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f01611bb",
+   "id": "fe7a65fe",
    "metadata": {
     "hide-output": false
    },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6219faa",
+   "id": "4e39e1a0",
    "metadata": {},
    "source": [
     "In the function above you can see that\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b36025b",
+   "id": "77d5b395",
    "metadata": {},
    "source": [
     "### Deep Network\n",
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5979f7de",
+   "id": "f625cb55",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cd5d24b",
+   "id": "9fe437b3",
    "metadata": {},
    "source": [
     "### Tracking errors\n",
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb9fd7ea",
+   "id": "9382e8b0",
    "metadata": {
     "hide-output": false
    },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2be946a",
+   "id": "f9429dbb",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59b9395b",
+   "id": "ffd4954c",
    "metadata": {},
    "source": [
     "### Linear regression\n",
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "380ef84d",
+   "id": "0d93f4df",
    "metadata": {
     "hide-output": false
    },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f898d340",
+   "id": "94991e2a",
    "metadata": {},
    "source": [
     "Now we train the model using the training data."
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad433de4",
+   "id": "b92709ec",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55cb9b61",
+   "id": "010aeeb2",
    "metadata": {},
    "source": [
     "Let’s have a look at the evolution of MSE as the model is trained."
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e81786d6",
+   "id": "3f703eb4",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59989ffd",
+   "id": "7425e433",
    "metadata": {},
    "source": [
     "Let’s print the final MSE on the cross-validation data."
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53757e1d",
+   "id": "11adbc8c",
    "metadata": {
     "hide-output": false
    },
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f81a1426",
+   "id": "808197c6",
    "metadata": {},
    "source": [
     "Here’s our output predictions on the cross-validation data."
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c2993cd",
+   "id": "69cdc557",
    "metadata": {
     "hide-output": false
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8348c395",
+   "id": "18d6b940",
    "metadata": {},
    "source": [
     "We use the following function to plot our predictions along with the data."
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e2d0696",
+   "id": "d50e299d",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f78cdeb",
+   "id": "3bd7401d",
    "metadata": {},
    "source": [
     "Let’s now call the function on the cross-validation data."
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6326305",
+   "id": "6fabbfb7",
    "metadata": {
     "hide-output": false
    },
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fa3cd5c",
+   "id": "4be5869d",
    "metadata": {},
    "source": [
     "### Deep learning\n",
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9f37a0e",
+   "id": "5850b5a7",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7a76a19",
+   "id": "668b6c6b",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "898bc8e0",
+   "id": "712d3026",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a25de2c3",
+   "id": "326206a4",
    "metadata": {},
    "source": [
     "Here’s the final MSE for the deep learning model."
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4af4b98f",
+   "id": "68fc4dcd",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e74124cd",
+   "id": "4be16d68",
    "metadata": {},
    "source": [
     "You will notice that this loss is much lower than the one we achieved with\n",
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f30ac358",
+   "id": "95c12582",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c429f28c",
+   "id": "5b48895a",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e25f26c",
+   "id": "c987a62a",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e3b5e83",
+   "id": "36811c18",
    "metadata": {},
    "source": [
     "Not surprisingly, the multilayer neural network does a much better job of fitting the data.\n",
@@ -685,7 +685,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815079.7735481,
+  "date": 1768362174.8159468,
   "filename": "keras.md",
   "kernelspec": {
    "display_name": "Python",
