--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7a3cfd98",
+   "id": "552440c7",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9c15a60",
+   "id": "ea904eb6",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faa1cd39",
+   "id": "6bd4dd3f",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0093ea96",
+   "id": "663ae57a",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a536a394",
+   "id": "6698fc39",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110c9a23",
+   "id": "27f3ca37",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0bcd076",
+   "id": "b3b1c654",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d6753ba",
+   "id": "32be0d81",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e94a3f34",
+   "id": "b88ff8e0",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ed941d9",
+   "id": "594621aa",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92700f18",
+   "id": "8fa1a861",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ac32952",
+   "id": "fc55caf6",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86e51682",
+   "id": "95f76e98",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f589934",
+   "id": "1e5e1dd9",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fca76e7b",
+   "id": "05595a2e",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4782cdb3",
+   "id": "53a817ef",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b8809a9",
+   "id": "00b5dc6b",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "979558d1",
+   "id": "ecee5c9b",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4cc2826",
+   "id": "d7ea86dd",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98141c50",
+   "id": "283d48c3",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "081a438a",
+   "id": "50b5101d",
    "metadata": {
     "hide-output": false
    },
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7d3196b",
+   "id": "2e170dc3",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59f36456",
+   "id": "c07880cf",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eaa1c01",
+   "id": "079c95c8",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9453e416",
+   "id": "f96530c1",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48458367",
+   "id": "6a4bec04",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cf2742f",
+   "id": "d6a05cda",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e6fd593",
+   "id": "b30a8378",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8719528b",
+   "id": "6349d381",
    "metadata": {
     "hide-output": false
    },
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4f4deaf",
+   "id": "af0a891c",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06a38b69",
+   "id": "cb458057",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "587f4669",
+   "id": "8bfd6425",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c18baa6",
+   "id": "4318b2c7",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20500454",
+   "id": "a0060815",
    "metadata": {
     "hide-output": false
    },
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "093e2866",
+   "id": "a563c12c",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56dae9b3",
+   "id": "058999f5",
    "metadata": {
     "hide-output": false
    },
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77f4f364",
+   "id": "2426f49a",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "207fc314",
+   "id": "6f5d380d",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5df4fd9f",
+   "id": "b2f8c855",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c7ec414",
+   "id": "3c491b49",
    "metadata": {
     "hide-output": false
    },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8454268",
+   "id": "e69aa8a7",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf4362ec",
+   "id": "11a0feb5",
    "metadata": {
     "hide-output": false
    },
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dfebeec",
+   "id": "1b933314",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34164ee5",
+   "id": "9c7e1ca3",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3104a520",
+   "id": "bb6ded11",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8630e5a",
+   "id": "99e5caa1",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "068013c8",
+   "id": "8e38c78b",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf2a9fcd",
+   "id": "e403b9c2",
    "metadata": {},
    "source": [
     "## Solution"
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bb21552",
+   "id": "9efe9d4c",
    "metadata": {
     "hide-output": false
    },
@@ -1024,7 +1024,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815079.846443,
+  "date": 1768362174.889289,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
