--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f5a752f7",
+   "id": "b18269c4",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7aea3acd",
+   "id": "a19afa3d",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21ee9dc8",
+   "id": "d88bdb4b",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "044a8bdb",
+   "id": "5474fb83",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21f36615",
+   "id": "e0ed2cca",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00d261da",
+   "id": "1589cbef",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "204d74c9",
+   "id": "e05719e8",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bae88020",
+   "id": "439dae38",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abe0fd52",
+   "id": "fdb82e9c",
    "metadata": {
     "hide-output": false
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "137af432",
+   "id": "0afe4282",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8f522a5",
+   "id": "09eebd50",
    "metadata": {
     "hide-output": false
    },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cc7081b",
+   "id": "3e6e3de0",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c80aba9e",
+   "id": "74f15f7f",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0ddf28b",
+   "id": "28a84a09",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c92d4666",
+   "id": "cfe15279",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d0b0f60",
+   "id": "7ec7df67",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fd6b276",
+   "id": "86aaf047",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0d02838",
+   "id": "d84b7057",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d23c26e0",
+   "id": "594db1a2",
    "metadata": {
     "hide-output": false
    },
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b904bd0",
+   "id": "00442c46",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "326f4d27",
+   "id": "5b15044c",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b590f773",
+   "id": "5d04df32",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be1cb412",
+   "id": "4b5dda5e",
    "metadata": {
     "hide-output": false
    },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79a06dc4",
+   "id": "1e673833",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc8850d4",
+   "id": "c5f8eb95",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e760b66c",
+   "id": "203a8603",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119556a8",
+   "id": "b92f6ec0",
    "metadata": {
     "hide-output": false
    },
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e904390",
+   "id": "bce2e5a3",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b361214c",
+   "id": "f7158afd",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdbe96a3",
+   "id": "4726e13e",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b9ffe66",
+   "id": "7cb0d0be",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "436d0eb1",
+   "id": "24b6ea83",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "866ed5d2",
+   "id": "fd26005e",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e24b551c",
+   "id": "5a85af0e",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c9e5a56",
+   "id": "01d655bd",
    "metadata": {
     "hide-output": false
    },
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78dc03e2",
+   "id": "f9d099fa",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a63c2bb",
+   "id": "3d0bde51",
    "metadata": {
     "hide-output": false
    },
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "077d2f83",
+   "id": "ab6f14b4",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4b68659",
+   "id": "bf2c3c54",
    "metadata": {
     "hide-output": false
    },
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0cf4ca0",
+   "id": "70b8aa73",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1073,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "302a1e4f",
+   "id": "1ddbb0f6",
    "metadata": {
     "hide-output": false
    },
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2c5265c",
+   "id": "b3b0d9eb",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1094,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f981467c",
+   "id": "f1c5933d",
    "metadata": {
     "hide-output": false
    },
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fd8312d",
+   "id": "bf1c75db",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1117,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7920e627",
+   "id": "b2527243",
    "metadata": {
     "hide-output": false
    },
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "156f6669",
+   "id": "30716997",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fe7ad2c",
+   "id": "0ad74f52",
    "metadata": {
     "hide-output": false
    },
@@ -1157,7 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "544dcfcc",
+   "id": "4c7f29c8",
    "metadata": {
     "hide-output": false
    },
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eac23175",
+   "id": "dff942dd",
    "metadata": {
     "hide-output": false
    },
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56278b59",
+   "id": "7d0d168d",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1203,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aa2b6f5",
+   "id": "f28bc0bc",
    "metadata": {
     "hide-output": false
    },
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "093c3cc4",
+   "id": "f70145cf",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70d1970f",
+   "id": "b73ed57a",
    "metadata": {
     "hide-output": false
    },
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b920931",
+   "id": "75d87628",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1278,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52314ceb",
+   "id": "5c321f4e",
    "metadata": {
     "hide-output": false
    },
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8552075f",
+   "id": "5a211a56",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a2311de",
+   "id": "7757cb4c",
    "metadata": {
     "hide-output": false
    },
@@ -1339,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03699905",
+   "id": "a2567e45",
    "metadata": {
     "hide-output": false
    },
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21ff48f3",
+   "id": "4f26c88e",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1362,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b3b6e7c",
+   "id": "5e219a5a",
    "metadata": {
     "hide-output": false
    },
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee2c9a63",
+   "id": "88505394",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34c30f24",
+   "id": "b3644878",
    "metadata": {
     "hide-output": false
    },
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3066d0f3",
+   "id": "614e3c15",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ac27679",
+   "id": "59e6cf6c",
    "metadata": {
     "hide-output": false
    },
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d952fba7",
+   "id": "f7f43ae4",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1428,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e73cf117",
+   "id": "6899fce3",
    "metadata": {
     "hide-output": false
    },
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69dc1138",
+   "id": "f15b4e16",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1458,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1a69609",
+   "id": "8620e6af",
    "metadata": {
     "hide-output": false
    },
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e1a2bb8",
+   "id": "8c5c1a38",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1496,7 +1496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "760c8760",
+   "id": "f00f5d21",
    "metadata": {
     "hide-output": false
    },
@@ -1518,7 +1518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fba081bb",
+   "id": "55acb5e9",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1527,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b3f9c8e",
+   "id": "4b9bf8e6",
    "metadata": {
     "hide-output": false
    },
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d38c1950",
+   "id": "c04f8837",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ebbff10",
+   "id": "a7180861",
    "metadata": {
     "hide-output": false
    },
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59b4d9b6",
+   "id": "7895e42f",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b62d94f",
+   "id": "27843bf4",
    "metadata": {
     "hide-output": false
    },
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43a8a585",
+   "id": "3f524f60",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1594,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b05d80e0",
+   "id": "bfea54b6",
    "metadata": {
     "hide-output": false
    },
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d23e7f3",
+   "id": "c1519df0",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1614,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "586c5143",
+   "id": "162c1388",
    "metadata": {
     "hide-output": false
    },
@@ -1625,7 +1625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b84fea60",
+   "id": "b04f1d3b",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1636,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffd5edd0",
+   "id": "56200334",
    "metadata": {
     "hide-output": false
    },
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01b038bc",
+   "id": "e85fc60f",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1664,7 +1664,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815079.9027305,
+  "date": 1768362174.9453328,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
