--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "abb8318d",
+   "id": "9847dca5",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37652a41",
+   "id": "5d7b0846",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1df805a8",
+   "id": "cb8dde73",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b4c3db3",
+   "id": "e33e8d96",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b0217bc",
+   "id": "f619dd8e",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0af6820e",
+   "id": "3a429a9d",
    "metadata": {
     "hide-output": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a43d7882",
+   "id": "e4ef14d7",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f4510bc",
+   "id": "1583a5ab",
    "metadata": {
     "hide-output": false
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9103a0e5",
+   "id": "ed12f7b7",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2531a8d0",
+   "id": "79036114",
    "metadata": {
     "hide-output": false
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c706314",
+   "id": "edcc88a5",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10733ddc",
+   "id": "eded415a",
    "metadata": {
     "hide-output": false
    },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69f0de81",
+   "id": "703125bc",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac5e61c0",
+   "id": "beb14df9",
    "metadata": {
     "hide-output": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c87711b",
+   "id": "1763e83e",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbd32f35",
+   "id": "a7c23fd6",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d77534aa",
+   "id": "47396bd5",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "232513b4",
+   "id": "fc31756a",
    "metadata": {
     "hide-output": false
    },
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8302b61f",
+   "id": "ec43ec6a",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c73f9b8",
+   "id": "4ba93f34",
    "metadata": {
     "hide-output": false
    },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f0d577a",
+   "id": "cc4a5865",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0569850",
+   "id": "da3dfa6b",
    "metadata": {
     "hide-output": false
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1194608",
+   "id": "db3dcfee",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f7a3531",
+   "id": "1b98bbf2",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19fc3e4c",
+   "id": "028087ea",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd430995",
+   "id": "5f537618",
    "metadata": {
     "hide-output": false
    },
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c8bb0f3",
+   "id": "be0f5aee",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "246d2d62",
+   "id": "8f348898",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae0bdeb9",
+   "id": "9bd4304d",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "934148b3",
+   "id": "a42202d1",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26158c53",
+   "id": "25e2f49b",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67dbeff4",
+   "id": "fd1057e5",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd3cd67a",
+   "id": "c393ebb9",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50168386",
+   "id": "e4b553a0",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45ab6fa8",
+   "id": "7e1dc399",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de0990fd",
+   "id": "17172c94",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6891585e",
+   "id": "d1e740e3",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bede7b8a",
+   "id": "dd3862c7",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2166250",
+   "id": "251a2285",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a0fff94",
+   "id": "084c7327",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb7ecf5f",
+   "id": "5ab0eb2a",
    "metadata": {
     "hide-output": false
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "826d3d5f",
+   "id": "3161b30c",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2059118b",
+   "id": "d27a31f2",
    "metadata": {
     "hide-output": false
    },
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3881d0e5",
+   "id": "64061e25",
    "metadata": {
     "hide-output": false
    },
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "270ede1c",
+   "id": "df0011b4",
    "metadata": {
     "hide-output": false
    },
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aa4f1ef",
+   "id": "1998f6c7",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05d0b0b8",
+   "id": "44718bd5",
    "metadata": {
     "hide-output": false
    },
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f48cfaf5",
+   "id": "55700b73",
    "metadata": {
     "hide-output": false
    },
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6e18bf9",
+   "id": "6aadb7d3",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca79d97d",
+   "id": "41536079",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92376ec0",
+   "id": "12c1c6e7",
    "metadata": {
     "hide-output": false
    },
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5796c705",
+   "id": "9a617fbf",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c82d457",
+   "id": "a67713d7",
    "metadata": {
     "hide-output": false
    },
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e29b91c3",
+   "id": "ce6a58ef",
    "metadata": {
     "hide-output": false
    },
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b219946c",
+   "id": "b7e80423",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eec0fdf",
+   "id": "9b16e76f",
    "metadata": {
     "hide-output": false
    },
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a38f23bc",
+   "id": "ec666bd3",
    "metadata": {
     "hide-output": false
    },
@@ -951,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc1f8f09",
+   "id": "5fd985cb",
    "metadata": {
     "hide-output": false
    },
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee9b9e6f",
+   "id": "d10671ed",
    "metadata": {
     "hide-output": false
    },
@@ -993,7 +993,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815079.9831996,
+  "date": 1768362175.0261405,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
