--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "529acf15",
+   "id": "fc8db58e",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4604900e",
+   "id": "964658d6",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b947113c",
+   "id": "932a7de0",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec2b1423",
+   "id": "d5ac537a",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b987d54",
+   "id": "49faf651",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce7eedfe",
+   "id": "a9d70843",
    "metadata": {
     "hide-output": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4101e0a2",
+   "id": "5595f79a",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5211cf8",
+   "id": "49ae848d",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b32f5630",
+   "id": "c5c4c751",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85ffeb64",
+   "id": "a79abec4",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb6187d",
+   "id": "4ecbac98",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8499b848",
+   "id": "8d6d4852",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8612453b",
+   "id": "ffc3271a",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed58f9a6",
+   "id": "0cb09916",
    "metadata": {
     "hide-output": false
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "821e887f",
+   "id": "82c33ce6",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca83bcb1",
+   "id": "ffa7f8be",
    "metadata": {
     "hide-output": false
    },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e9aa95b",
+   "id": "e7d32467",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "834473ce",
+   "id": "2763f900",
    "metadata": {
     "hide-output": false
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b734805c",
+   "id": "c20d6327",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6072a473",
+   "id": "e45f013e",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bd5c511",
+   "id": "9b3c220a",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce30812c",
+   "id": "4bf05bdf",
    "metadata": {
     "hide-output": false
    },
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "382e1351",
+   "id": "eabead6f",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b89f1009",
+   "id": "8faf7b0d",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c974c95",
+   "id": "7c60f7b8",
    "metadata": {
     "hide-output": false
    },
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a66c7523",
+   "id": "09cf51e7",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d5bf76e",
+   "id": "968f5c76",
    "metadata": {
     "hide-output": false
    },
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f997f928",
+   "id": "d39aa0ce",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "270eb8c1",
+   "id": "787f0ab8",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beaeaee9",
+   "id": "6ba1c71e",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a44c22f9",
+   "id": "a5a108e0",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63da2ae7",
+   "id": "ff3cab71",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "633f16a6",
+   "id": "9329eb10",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00b048fb",
+   "id": "ebb51094",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "991f4c5e",
+   "id": "966f32b4",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f72048f",
+   "id": "b25dc495",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c03a348",
+   "id": "6fa8d586",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "332d1c44",
+   "id": "8b335e48",
    "metadata": {
     "hide-output": false
    },
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6074e48",
+   "id": "e977f1d9",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b455465e",
+   "id": "d8fb43c0",
    "metadata": {
     "hide-output": false
    },
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bf40bdf",
+   "id": "fae8b3e1",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65a69a5a",
+   "id": "8c534bb2",
    "metadata": {
     "hide-output": false
    },
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9b0cc4c",
+   "id": "07a6f3a1",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13dd9493",
+   "id": "b67c435b",
    "metadata": {
     "hide-output": false
    },
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05f7aeb0",
+   "id": "116334ab",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdc9d019",
+   "id": "ab152716",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb305e3a",
+   "id": "1add411a",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2893594c",
+   "id": "116e5524",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c4cd04c",
+   "id": "9497d9d9",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a61aec41",
+   "id": "d20120d0",
    "metadata": {
     "hide-output": false
    },
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13f97aba",
+   "id": "5d507438",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c805b78",
+   "id": "2cf2207a",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bf6e323",
+   "id": "4f350615",
    "metadata": {
     "hide-output": false
    },
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2544d8db",
+   "id": "884d48f5",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07ddc24d",
+   "id": "1981d849",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6b4f4a4",
+   "id": "366b6ec3",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ee95154",
+   "id": "5ef0def4",
    "metadata": {
     "hide-output": false
    },
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8551210b",
+   "id": "82451950",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adf3e30d",
+   "id": "6416331c",
    "metadata": {
     "hide-output": false
    },
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a04c616",
+   "id": "f90b3525",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e68b0e79",
+   "id": "6de66252",
    "metadata": {
     "hide-output": false
    },
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ff499ee",
+   "id": "32e58df8",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "586db143",
+   "id": "f6bffac2",
    "metadata": {
     "hide-output": false
    },
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2fb4c47",
+   "id": "4521142f",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07158d5a",
+   "id": "7446d402",
    "metadata": {
     "hide-output": false
    },
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5ca3826",
+   "id": "c51c46ee",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96ce6316",
+   "id": "3ee12075",
    "metadata": {
     "hide-output": false
    },
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f975fb8",
+   "id": "0e78a0a2",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d7d280b",
+   "id": "263fa554",
    "metadata": {
     "hide-output": false
    },
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf4361f8",
+   "id": "d85ca08c",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -1047,7 +1047,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815080.01391,
+  "date": 1768362175.0564766,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
