--- a/opt_savings_2.ipynb
+++ b/opt_savings_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ca08ee30",
+   "id": "37c69c64",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91c77795",
+   "id": "71514da3",
    "metadata": {},
    "source": [
     "# Optimal Savings II: Alternative Algorithms"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6a1dad7",
+   "id": "40b87079",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6f90dd8",
+   "id": "61168ab7",
    "metadata": {
     "hide-output": false
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b172262",
+   "id": "8848312c",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0de33a9",
+   "id": "a14edea6",
    "metadata": {
     "hide-output": false
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4705392f",
+   "id": "2a0a0e03",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running."
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ab7721a",
+   "id": "05859596",
    "metadata": {
     "hide-output": false
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "608d55d5",
+   "id": "7984de35",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21ad261b",
+   "id": "440df09c",
    "metadata": {
     "hide-output": false
    },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f625f4bc",
+   "id": "89bf10c8",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeb32426",
+   "id": "f3c2e86e",
    "metadata": {
     "hide-output": false
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "014a34f7",
+   "id": "218670a8",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eeb6176",
+   "id": "2bdcb7fe",
    "metadata": {
     "hide-output": false
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6e013ca",
+   "id": "4347ba79",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to vectorize $ B $ by simulating nested loops."
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "779bfbba",
+   "id": "ac938ddf",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65b7043b",
+   "id": "e8d8c368",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ B $."
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52421f14",
+   "id": "ac2f1c26",
    "metadata": {
     "hide-output": false
    },
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fd0364b",
+   "id": "abf6f666",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "259f3e80",
+   "id": "fd4edcea",
    "metadata": {
     "hide-output": false
    },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb7f2174",
+   "id": "ac1665e2",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "076669db",
+   "id": "c6cf0dfe",
    "metadata": {
     "hide-output": false
    },
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dd78b6a",
+   "id": "07ebf03a",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e4eeecf",
+   "id": "118944c3",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a438565",
+   "id": "f5712be3",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d31d5292",
+   "id": "9e5d9d90",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19d08605",
+   "id": "034b8529",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ r_\\sigma $."
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16d758e0",
+   "id": "e51642d6",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d22aa6ed",
+   "id": "5f0c51bf",
    "metadata": {},
    "source": [
     "Now we define the policy operator $ T_\\sigma $ going through similar steps"
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ded230d1",
+   "id": "2b029701",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2451cee9",
+   "id": "de874016",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15155674",
+   "id": "1ccc9597",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67873280",
+   "id": "d0fb6de9",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e4aecdb",
+   "id": "1bb0215b",
    "metadata": {
     "hide-output": false
    },
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c87750c8",
+   "id": "400609cd",
    "metadata": {},
    "source": [
     "## Iteration\n",
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00bedb1c",
+   "id": "2083a1bb",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb358675",
+   "id": "c0b02592",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb59d91b",
+   "id": "327d9573",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22f87f0a",
+   "id": "169c634e",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2407321a",
+   "id": "3045239b",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a839b2f",
+   "id": "91e43da5",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f8d0876",
+   "id": "40561ee1",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bc55767",
+   "id": "6fef8c4b",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84b37815",
+   "id": "40845ef1",
    "metadata": {
     "hide-output": false
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6888439f",
+   "id": "f2be0bab",
    "metadata": {},
    "source": [
     "Here’s HPI."
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d55ea2fd",
+   "id": "e4381b31",
    "metadata": {
     "hide-output": false
    },
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3216c865",
+   "id": "af9091df",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -780,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35ff4130",
+   "id": "7bc7d846",
    "metadata": {
     "hide-output": false
    },
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "364d2122",
+   "id": "3a2877b0",
    "metadata": {
     "hide-output": false
    },
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ea848f4",
+   "id": "35ac4bf0",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7751b064",
+   "id": "38c4cec7",
    "metadata": {
     "hide-output": false
    },
@@ -836,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0feb870",
+   "id": "1944f51a",
    "metadata": {
     "hide-output": false
    },
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b73ccc7",
+   "id": "3636afe5",
    "metadata": {
     "hide-output": false
    },
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5495957",
+   "id": "c08b49bf",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6691e84a",
+   "id": "76ef9a32",
    "metadata": {
     "hide-output": false
    },
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99ca44ae",
+   "id": "c00a0b4e",
    "metadata": {
     "hide-output": false
    },
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "988319c0",
+   "id": "850be4f8",
    "metadata": {
     "hide-output": false
    },
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dd3d2a4",
+   "id": "cf531e1e",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37b52db4",
+   "id": "9a429ce3",
    "metadata": {
     "hide-output": false
    },
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9926ebd1",
+   "id": "61e96ce7",
    "metadata": {
     "hide-output": false
    },
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6218c843",
+   "id": "4bf5187a",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1d3b841",
+   "id": "ef0a6c93",
    "metadata": {
     "hide-output": false
    },
@@ -995,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "374e69b9",
+   "id": "a4a7cb99",
    "metadata": {
     "hide-output": false
    },
@@ -1008,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad726bb6",
+   "id": "40111710",
    "metadata": {
     "hide-output": false
    },
@@ -1025,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6298dace",
+   "id": "0cbdaa0e",
    "metadata": {
     "hide-output": false
    },
@@ -1048,7 +1048,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815080.0435648,
+  "date": 1768362175.0855508,
   "filename": "opt_savings_2.md",
   "kernelspec": {
    "display_name": "Python",
