--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d849eb7b",
+   "id": "a44dd421",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf4d5d6d",
+   "id": "7bf7ecec",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edc4f19f",
+   "id": "03ab7dc3",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86ad872e",
+   "id": "97c8ddf1",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b892e481",
+   "id": "8d0c0254",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db3c21dc",
+   "id": "86a05d0f",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8682015",
+   "id": "e72f6094",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec89cae6",
+   "id": "a99c5480",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bbf697f",
+   "id": "6fde5d9f",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d35c0a81",
+   "id": "048133bd",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4511dc3a",
+   "id": "e0fe58ec",
    "metadata": {},
    "source": [
     "### Simulating the VAR\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "094b9ad8",
+   "id": "d77278cb",
    "metadata": {
     "hide-output": false
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94c68650",
+   "id": "4aa4a123",
    "metadata": {},
    "source": [
     "### Discretizing the VAR\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3897c4c3",
+   "id": "0588882e",
    "metadata": {
     "hide-output": false
    },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5132a573",
+   "id": "1bf72c63",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70806774",
+   "id": "eaa8847d",
    "metadata": {
     "hide-output": false
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6979420d",
+   "id": "cd982969",
    "metadata": {},
    "source": [
     "### Testing the discretization\n",
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12b3c638",
+   "id": "4718d202",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0880ac0",
+   "id": "48ab0cdf",
    "metadata": {
     "hide-output": false
    },
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fe589e9",
+   "id": "8ac099d3",
    "metadata": {
     "hide-output": false
    },
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "049c6b5d",
+   "id": "1ed05c50",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad5a4d4a",
+   "id": "0fc09e5a",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76f29bd5",
+   "id": "68f12ba8",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "041ecb25",
+   "id": "83d5fcc6",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f03b36cc",
+   "id": "80cf440a",
    "metadata": {},
    "source": [
     "## Overborrowing model in Python / JAX\n",
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa698322",
+   "id": "6a5aaf26",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c98947ee",
+   "id": "e836320e",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58b85bf0",
+   "id": "e3bad3a8",
    "metadata": {},
    "source": [
     "Default parameter values are from Bianchi.\n",
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f13c76c",
+   "id": "72f8ed5f",
    "metadata": {
     "hide-output": false
    },
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23d64cef",
+   "id": "4b8e1a82",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "150f2ccc",
+   "id": "e8640b4c",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a58e6f8b",
+   "id": "69409728",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2604c7e1",
+   "id": "54afc450",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edbcec8a",
+   "id": "a7f272e5",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df9b5ad1",
+   "id": "f4c9059b",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a50a5129",
+   "id": "1814ca0a",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24267c4e",
+   "id": "1f0c00c9",
    "metadata": {
     "hide-output": false
    },
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd2ef73",
+   "id": "dcb49e81",
    "metadata": {},
    "source": [
     "Here’s the policy operator"
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e249d7c3",
+   "id": "ad288034",
    "metadata": {
     "hide-output": false
    },
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "669d27e8",
+   "id": "0f5a6c52",
    "metadata": {
     "hide-output": false
    },
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9003df3b",
+   "id": "01685531",
    "metadata": {
     "hide-output": false
    },
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f58866f8",
+   "id": "842ccfa5",
    "metadata": {
     "hide-output": false
    },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5a3421d",
+   "id": "fe727b14",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a46eaad2",
+   "id": "47a7c5de",
    "metadata": {
     "hide-output": false
    },
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6bdbda4",
+   "id": "baa1b75d",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbb2005c",
+   "id": "d6199741",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a68ce17",
+   "id": "3a88315f",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ac5e202",
+   "id": "cf7ba087",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3de196f7",
+   "id": "5fedfcaf",
    "metadata": {
     "hide-output": false
    },
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "295ef2c9",
+   "id": "c7c932e3",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1085,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9d56170",
+   "id": "bb3de770",
    "metadata": {
     "hide-output": false
    },
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb9d8140",
+   "id": "8b5fc740",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c991d4e5",
+   "id": "b5e9aa58",
    "metadata": {
     "hide-output": false
    },
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07b6cffb",
+   "id": "2078c796",
    "metadata": {
     "hide-output": false
    },
@@ -1167,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9ca0aa1",
+   "id": "24c89f39",
    "metadata": {
     "hide-output": false
    },
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80bc5dec",
+   "id": "dcb6fe48",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e618bc91",
+   "id": "4bc8efb8",
    "metadata": {
     "hide-output": false
    },
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b614389d",
+   "id": "66e1b71a",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31db30ac",
+   "id": "18d42f48",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9212c6ba",
+   "id": "936c0244",
    "metadata": {
     "hide-output": false
    },
@@ -1246,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d260fd12",
+   "id": "17d526d3",
    "metadata": {
     "hide-output": false
    },
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce0f47af",
+   "id": "e7c44bf0",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb0465a4",
+   "id": "f18fbb42",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b12de90d",
+   "id": "a87afce0",
    "metadata": {
     "hide-output": false
    },
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71d548e5",
+   "id": "d9f66522",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9fc9a31",
+   "id": "7cacf4d2",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03aaa452",
+   "id": "38e4836d",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1350,7 +1350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f71ecb1",
+   "id": "434d4dfc",
    "metadata": {
     "hide-output": false
    },
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65f58254",
+   "id": "672e22b9",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dc55668",
+   "id": "5ab927a7",
    "metadata": {},
    "source": [
     "## Solution"
@@ -1404,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19915381",
+   "id": "57fe162e",
    "metadata": {
     "hide-output": false
    },
@@ -1416,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102d0d96",
+   "id": "d8203dbb",
    "metadata": {
     "hide-output": false
    },
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9200fd5c",
+   "id": "7936b701",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1438,7 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaa7588c",
+   "id": "8a0e2ed8",
    "metadata": {
     "hide-output": false
    },
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69482c70",
+   "id": "b52da7d2",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1459,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83650899",
+   "id": "c48ae855",
    "metadata": {
     "hide-output": false
    },
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e79d588",
+   "id": "23785aca",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "638c7896",
+   "id": "81b1dcfb",
    "metadata": {
     "hide-output": false
    },
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51689ac9",
+   "id": "bd0238e5",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in Bianchi.\n",
@@ -1513,7 +1513,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815080.106015,
+  "date": 1768362175.1471846,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
