--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f58d5ec1",
+   "id": "d4f882cf",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70f97f7a",
+   "id": "d90cc693",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1373dcb7",
+   "id": "81ddc801",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e9dc7cc",
+   "id": "e2993cdb",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7b413b7",
+   "id": "c505f32e",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90efd602",
+   "id": "f46d052e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c5e0f80",
+   "id": "613dcc90",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da9dbdc4",
+   "id": "ffa61065",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99f49b25",
+   "id": "cda0ee34",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5c5ea44",
+   "id": "547fa3cd",
    "metadata": {
     "hide-output": false
    },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "076be489",
+   "id": "c7cf0749",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d51d96d8",
+   "id": "e5f32237",
    "metadata": {
     "hide-output": false
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdc30674",
+   "id": "390b5653",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "083e5aa0",
+   "id": "8a917075",
    "metadata": {
     "hide-output": false
    },
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0756f16",
+   "id": "9b24fbf2",
    "metadata": {
     "hide-output": false
    },
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d118a30",
+   "id": "e36e6b0d",
    "metadata": {
     "hide-output": false
    },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ea0037a",
+   "id": "f13d27db",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cdd1bc9",
+   "id": "ce4802f8",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64103c8d",
+   "id": "3e2e37e4",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edc485f3",
+   "id": "5f41059c",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb98cfb9",
+   "id": "a5192625",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad7b996d",
+   "id": "f051c98e",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed6e612c",
+   "id": "29901494",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cce042ed",
+   "id": "606dcebe",
    "metadata": {
     "hide-output": false
    },
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "908788e7",
+   "id": "37dc5ec3",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6607f6cf",
+   "id": "67ae590a",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4052502",
+   "id": "19d5ee38",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12dc3528",
+   "id": "7404ccb7",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "533a5522",
+   "id": "a4e07324",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c480421",
+   "id": "ae4d6453",
    "metadata": {
     "hide-output": false
    },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dbb85f6",
+   "id": "8eac1d38",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c39a5d8",
+   "id": "31317b4d",
    "metadata": {
     "hide-output": false
    },
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27add655",
+   "id": "836fa32f",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df74d34c",
+   "id": "d05c1834",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81867f34",
+   "id": "c6e546c9",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e745927b",
+   "id": "870d2c30",
    "metadata": {
     "hide-output": false
    },
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84800b68",
+   "id": "36a48733",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9134bef",
+   "id": "93d8270b",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be70366d",
+   "id": "441d7834",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +652,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815080.1269321,
+  "date": 1768362175.1679409,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
