--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3d4cbb8f",
+   "id": "d8177271",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c05eec88",
+   "id": "1173de40",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fb1f129",
+   "id": "9c7552f2",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef3a79aa",
+   "id": "7ec393aa",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0b56ea1",
+   "id": "e00d1343",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9fb8909",
+   "id": "15f5396d",
    "metadata": {
     "hide-output": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c8b301d",
+   "id": "8bafd40f",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88d5ac9e",
+   "id": "78560d37",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09561c05",
+   "id": "09ec523b",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "796bace9",
+   "id": "2c9834d2",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f8973d5",
+   "id": "2f1016bc",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8daf5ff3",
+   "id": "f667b307",
    "metadata": {
     "hide-output": false
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8a0af75",
+   "id": "1b71a161",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4da3c2b8",
+   "id": "8b9e4ac6",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "605de5a8",
+   "id": "5d322e52",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bf76716",
+   "id": "d237cc51",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f6236b0",
+   "id": "7b83f063",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c98e7fda",
+   "id": "0055d267",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82dd9a32",
+   "id": "e7499128",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b00ae28",
+   "id": "d2780aea",
    "metadata": {
     "hide-output": false
    },
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18483b86",
+   "id": "cc071c74",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db95f138",
+   "id": "acc6b61d",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "611999dd",
+   "id": "a5d27780",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a8fefb6",
+   "id": "001f2ad5",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "489ee86a",
+   "id": "ea3db34c",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2912d484",
+   "id": "bf2abbd6",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a473ee6",
+   "id": "43869503",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "448f4c9a",
+   "id": "64d2d018",
    "metadata": {
     "hide-output": false
    },
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75f7ec34",
+   "id": "82cddb42",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b34b65ec",
+   "id": "4469b02e",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "943698ec",
+   "id": "129ba024",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "590032f5",
+   "id": "fa2e37e4",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa462b5b",
+   "id": "201c362d",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30695d05",
+   "id": "9c8649de",
    "metadata": {
     "hide-output": false
    },
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "416d8249",
+   "id": "193a57c5",
    "metadata": {
     "hide-output": false
    },
@@ -813,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04338b5f",
+   "id": "ec04bf3b",
    "metadata": {
     "hide-output": false
    },
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67c63bcc",
+   "id": "7cae949f",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -835,7 +835,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815079.569539,
+  "date": 1768362174.6152725,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
