--- a/jax_nn.ipynb
+++ b/jax_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aabf08a1",
+   "id": "5f0674bb",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b83bb386",
+   "id": "8decb310",
    "metadata": {},
    "source": [
     "# Neural Network Regression with JAX"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19353dd9",
+   "id": "0b234292",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bde6f5eb",
+   "id": "aa01a9c9",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4a489c4",
+   "id": "7c62c693",
    "metadata": {
     "hide-output": false
    },
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc32b23e",
+   "id": "6ef07fc0",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eca1aa9b",
+   "id": "ff58e6ec",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b1145f1",
+   "id": "f423edc4",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "997d97f8",
+   "id": "18d62c18",
    "metadata": {
     "hide-output": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7d1b960",
+   "id": "9fb5fd30",
    "metadata": {},
    "source": [
     "## Set Up\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b794ebc3",
+   "id": "7d9a3a0b",
    "metadata": {},
    "source": [
     "### Flow\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05fb0bf2",
+   "id": "33e962e4",
    "metadata": {
     "hide-output": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29a9ce4e",
+   "id": "94f9041e",
    "metadata": {},
    "source": [
     "### Data\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b29b8d12",
+   "id": "bfe5911e",
    "metadata": {
     "hide-output": false
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41327800",
+   "id": "710b1807",
    "metadata": {},
    "source": [
     "Here’s a plot of the data."
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a8690f9",
+   "id": "1e7abdda",
    "metadata": {
     "hide-output": false
    },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52327143",
+   "id": "ada51f41",
    "metadata": {},
    "source": [
     "## Training with Keras\n",
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbb3d16b",
+   "id": "6cf632bc",
    "metadata": {
     "hide-output": false
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f5dd177",
+   "id": "7115cd0c",
    "metadata": {},
    "source": [
     "Notice that we’ve set the optimizer to use stochastic gradient descent and a\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74665e45",
+   "id": "5f2e2953",
    "metadata": {
     "hide-output": false
    },
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dabbafff",
+   "id": "ef38292c",
    "metadata": {},
    "source": [
     "The next function extracts and visualizes a prediction from the trained model."
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4db46c4",
+   "id": "b20fcabb",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7acea48",
+   "id": "ff97f8be",
    "metadata": {},
    "source": [
     "Let’s run the Keras training:"
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e80459af",
+   "id": "ca2948a0",
    "metadata": {
     "hide-output": false
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5652c49c",
+   "id": "68a95241",
    "metadata": {},
    "source": [
     "The fit is good and we note the relatively low final MSE."
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1210ba99",
+   "id": "8bdc1667",
    "metadata": {},
    "source": [
     "## Training with JAX\n",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15b17921",
+   "id": "cd906825",
    "metadata": {},
    "source": [
     "### Background and set up\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "248206a5",
+   "id": "5b4cde15",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ec9089d",
+   "id": "4873ac6d",
    "metadata": {},
    "source": [
     "The following function initializes a single layer of the network using He\n",
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01d2e2da",
+   "id": "32ded484",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dca8d288",
+   "id": "dff0da33",
    "metadata": {},
    "source": [
     "The next function builds an entire network, as represented by its parameters, by\n",
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3ddcf62",
+   "id": "1caea465",
    "metadata": {
     "hide-output": false
    },
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f89a28c7",
+   "id": "9ed2aa23",
    "metadata": {},
    "source": [
     "Wait, you say!\n",
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b7329c6",
+   "id": "232715ea",
    "metadata": {},
    "source": [
     "### Coding the network\n",
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a2c8dcf",
+   "id": "35dd9ad9",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83ad0541",
+   "id": "dae1b6fb",
    "metadata": {},
    "source": [
     "The function $ f $ is appropriately vectorized, so that we can pass in the entire\n",
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc57cb61",
+   "id": "73fa4d11",
    "metadata": {
     "hide-output": false
    },
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "930b4681",
+   "id": "6a76c88e",
    "metadata": {},
    "source": [
     "We’ll use its gradient to do stochastic gradient descent.\n",
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3ca57a7",
+   "id": "290e1b09",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4bb7ad7",
+   "id": "4d84b077",
    "metadata": {},
    "source": [
     "The gradient of `loss_fn` is with respect to the first argument `θ`.\n",
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaef6dbe",
+   "id": "6b7283c2",
    "metadata": {},
    "source": [
     "### Gradient descent\n",
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba22f011",
+   "id": "096948bf",
    "metadata": {
     "hide-output": false
    },
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5152fbc",
+   "id": "800dd4ef",
    "metadata": {},
    "source": [
     "Here `jax.tree.map` understands `θ` and `gradient` as pytrees of the\n",
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12dd1432",
+   "id": "809ff28a",
    "metadata": {
     "hide-output": false
    },
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24bac3bb",
+   "id": "007e05aa",
    "metadata": {},
    "source": [
     "### Execution\n",
@@ -773,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c63893cc",
+   "id": "59c6e1bf",
    "metadata": {
     "hide-output": false
    },
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fba7b2bc",
+   "id": "520e6b7c",
    "metadata": {},
    "source": [
     "Despite the simplicity of our implementation, we actually perform slightly better than Keras.\n",
@@ -813,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a59f6772",
+   "id": "701f2637",
    "metadata": {
     "hide-output": false
    },
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d62c80d5",
+   "id": "e6e8f0b1",
    "metadata": {},
    "source": [
     "## JAX plus Optax\n",
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e6668fe",
+   "id": "3c32138e",
    "metadata": {},
    "source": [
     "### Optax with SGD\n",
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3e304d9",
+   "id": "a38caed9",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af2d85ee",
+   "id": "a688f92e",
    "metadata": {},
    "source": [
     "Let’s try running it."
@@ -898,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cbb7dfa",
+   "id": "c64791f5",
    "metadata": {
     "hide-output": false
    },
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ff5b372",
+   "id": "65a97666",
    "metadata": {
     "hide-output": false
    },
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42a3a4d5",
+   "id": "c8777cb2",
    "metadata": {},
    "source": [
     "### Optax with ADAM\n",
@@ -958,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07ba87ff",
+   "id": "8227c6ac",
    "metadata": {
     "hide-output": false
    },
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "987f6fa8",
+   "id": "4afed111",
    "metadata": {
     "hide-output": false
    },
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2abb8cdf",
+   "id": "bcc4d2cd",
    "metadata": {},
    "source": [
     "Here’s a visualization of the result."
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "653b16de",
+   "id": "07ac49eb",
    "metadata": {
     "hide-output": false
    },
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da1ff9c3",
+   "id": "92a82242",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0e3d0de",
+   "id": "6a252162",
    "metadata": {
     "hide-output": false
    },
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bf6872c",
+   "id": "fbb27da7",
    "metadata": {},
    "source": [
     "All methods achieve similar validation MSE values (around 0.043-0.045).\n",
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d25959fd",
+   "id": "23d161c6",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89b3855f",
+   "id": "16f7c672",
    "metadata": {},
    "source": [
     "## Exercise 23.1\n",
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ca29858",
+   "id": "46fdcbeb",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -1185,7 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49137589",
+   "id": "1d30da51",
    "metadata": {
     "hide-output": false
    },
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b08494f4",
+   "id": "3b41dd56",
    "metadata": {},
    "source": [
     "**Strategy 2: Deeper Network + Learning Rate Schedule**\n",
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b845dd5",
+   "id": "d65d3d9b",
    "metadata": {
     "hide-output": false
    },
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d377f7a5",
+   "id": "d7935752",
    "metadata": {},
    "source": [
     "**Strategy 3: Deeper Network + LR Schedule + L2 Regularization**\n",
@@ -1307,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "374203d2",
+   "id": "82673172",
    "metadata": {
     "hide-output": false
    },
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a064a0d",
+   "id": "9b97a9a9",
    "metadata": {},
    "source": [
     "**Strategy 4: Baseline + L2 Regularization**\n",
@@ -1388,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cd0f6e5",
+   "id": "3a521feb",
    "metadata": {
     "hide-output": false
    },
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1c8011b",
+   "id": "b2bba54c",
    "metadata": {},
    "source": [
     "**Results Summary**\n",
@@ -1465,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc78cceb",
+   "id": "abb8f4d6",
    "metadata": {
     "hide-output": false
    },
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f88f5842",
+   "id": "623f79c6",
    "metadata": {},
    "source": [
     "The experimental results reveal several lessons:\n",
@@ -1527,7 +1527,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815079.729033,
+  "date": 1768362174.771776,
   "filename": "jax_nn.md",
   "kernelspec": {
    "display_name": "Python",
