--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e8a29b0",
+   "id": "fcc437e3",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69d67e0b",
+   "id": "ff5c380d",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50270fbf",
+   "id": "26da22c7",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d832f8d",
+   "id": "b15cc8c8",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "692db114",
+   "id": "89a245d8",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f80aa464",
+   "id": "216d2b6e",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e26715a1",
+   "id": "a82d37dc",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca1b2ce5",
+   "id": "77d3f56d",
    "metadata": {},
    "source": [
     "### Set up\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74258e75",
+   "id": "ab87572e",
    "metadata": {},
    "source": [
     "### Rewards\n",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d7f452f",
+   "id": "4fe01e48",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0181d2c6",
+   "id": "d0466ed9",
    "metadata": {
     "hide-output": false
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1552d80d",
+   "id": "006468e3",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the `namedtuple`."
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf2e5e01",
+   "id": "7fd9a4b4",
    "metadata": {
     "hide-output": false
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e17dc8f0",
+   "id": "9e31754b",
    "metadata": {},
    "source": [
     "Let’s test it:"
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40ec49b3",
+   "id": "46d2bb3a",
    "metadata": {
     "hide-output": false
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82ae109d",
+   "id": "fce15c9f",
    "metadata": {
     "hide-output": false
    },
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be28b2ab",
+   "id": "1ecc4eef",
    "metadata": {
     "hide-output": false
    },
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "345a4032",
+   "id": "43c3a346",
    "metadata": {
     "hide-output": false
    },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd2d2386",
+   "id": "15bee27b",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26dc8494",
+   "id": "3cc41adb",
    "metadata": {
     "hide-output": false
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29cfc6f0",
+   "id": "5bec87a3",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7f48b96",
+   "id": "3cbf108d",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0536b3c7",
+   "id": "82468659",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5f7a84f",
+   "id": "e91b1be0",
    "metadata": {
     "hide-output": false
    },
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec6be76f",
+   "id": "ef82fe33",
    "metadata": {},
    "source": [
     "## Computing the solution\n",
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44c85bbb",
+   "id": "bf49706e",
    "metadata": {
     "hide-output": false
    },
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de0be4a3",
+   "id": "8f4fa7db",
    "metadata": {},
    "source": [
     "Here’s the optimal policy:"
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15a08a10",
+   "id": "c411b99c",
    "metadata": {
     "hide-output": false
    },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "087be2db",
+   "id": "1ba9c1c9",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6d58f6e",
+   "id": "892ae055",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0446d05",
+   "id": "b8ae6daf",
    "metadata": {
     "hide-output": false
    },
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d0581d4",
+   "id": "156cb045",
    "metadata": {
     "hide-output": false
    },
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9fdf183",
+   "id": "21e5d35e",
    "metadata": {},
    "source": [
     "Here’s a joint plot of the value function and the reservation wage."
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f242de4",
+   "id": "b94ddbf3",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b81b1f2e",
+   "id": "28f6601d",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dc9168e",
+   "id": "e2ac0534",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9e7c3b7",
+   "id": "ed0c65e4",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6197733",
+   "id": "94254d61",
    "metadata": {},
    "source": [
     "Now you need to modify `T` and `get_greedy` and then run value function iteration again."
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51404a3d",
+   "id": "7d96d54f",
    "metadata": {},
    "source": [
     "## Solution"
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18e44c0a",
+   "id": "5b875ee3",
    "metadata": {
     "hide-output": false
    },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "343a4506",
+   "id": "1daace00",
    "metadata": {},
    "source": [
     "Let’s plot the results together with the original risk neutral case and see what we get."
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "277fd1c4",
+   "id": "0eb2857f",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0e75d5a",
+   "id": "92c98359",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13c9ecd9",
+   "id": "61d587af",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -707,7 +707,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815079.7512653,
+  "date": 1768362174.7937171,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
