--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3c56b166",
+   "id": "263222d4",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "647614ea",
+   "id": "eef4b3cc",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -24,12 +24,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f0c63ff",
+   "id": "14e1ddd4",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87a35567",
+   "id": "a0e2ef5f",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22da0572",
+   "id": "91004132",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5af39e9",
+   "id": "c58b7290",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e842f3e",
+   "id": "d408c0f2",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79ce6101",
+   "id": "7f9b166e",
    "metadata": {
     "hide-output": false
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "117dacc3",
+   "id": "ae49442f",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bee63e2e",
+   "id": "586aef48",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c6bebef",
+   "id": "7a0eeec3",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d3cfd29",
+   "id": "0c1bc2ef",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e62281a",
+   "id": "876b19b7",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24b2427c",
+   "id": "ed0b1044",
    "metadata": {},
    "source": [
     "Here’s code to update a cross-section of firms according to the dynamics in\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91d421a8",
+   "id": "83488916",
    "metadata": {
     "hide-output": false
    },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7320f53b",
+   "id": "7ee37639",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dfc13d2",
+   "id": "7b8bcf5b",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04f0fd14",
+   "id": "5329b3e0",
    "metadata": {},
    "source": [
     "Let’s try running the code and generating a cross-section."
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b1a542c",
+   "id": "fe15386e",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "881a3e76",
+   "id": "7b379eec",
    "metadata": {},
    "source": [
     "We run the function again so we can see the speed without compile time."
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4546d2fe",
+   "id": "c0376a29",
    "metadata": {
     "hide-output": false
    },
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a81295a7",
+   "id": "efcd3716",
    "metadata": {},
    "source": [
     "Let’s produce the rank-size plot and check the distribution:"
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3886846",
+   "id": "75cc1de0",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71aa6bcd",
+   "id": "24295270",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16d12240",
+   "id": "ab239e86",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.fori_loop`\n",
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16e36c02",
+   "id": "5a23b125",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d479a94",
+   "id": "1ed90a3c",
    "metadata": {},
    "source": [
     "Let’s see if we get any speed gain"
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21b1dcc4",
+   "id": "e2da8571",
    "metadata": {
     "hide-output": false
    },
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac0e0c39",
+   "id": "99b3b079",
    "metadata": {
     "hide-output": false
    },
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2470736",
+   "id": "d547e090",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1680c5b",
+   "id": "81c5ed3f",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fc8500e",
+   "id": "db4cd182",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd779b98",
+   "id": "0969bb4c",
    "metadata": {},
    "source": [
     "## Exercise 6.1\n",
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4139ed59",
+   "id": "0047f744",
    "metadata": {},
    "source": [
     "## Solution"
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "779317a0",
+   "id": "02d3132c",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd8f1b71",
+   "id": "5300b282",
    "metadata": {},
    "source": [
     "Here are the run times."
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15fdb5d1",
+   "id": "887e7f7f",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e7c3cc7",
+   "id": "59c313b4",
    "metadata": {
     "hide-output": false
    },
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04d900eb",
+   "id": "ca25bbf9",
    "metadata": {},
    "source": [
     "This method might or might not be faster.\n",
@@ -665,7 +665,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815079.7961965,
+  "date": 1768362174.838429,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
