--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "41a78428",
+   "id": "6741e6d3",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7077ec83",
+   "id": "6baf59db",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e900096",
+   "id": "4937ed95",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1ff5df2",
+   "id": "90b94dd7",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d44b0fe8",
+   "id": "3edf1235",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "595cb6b0",
+   "id": "f29f7711",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60eff7f1",
+   "id": "9d832e40",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "909cc6b0",
+   "id": "f5c46168",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4a5abe6",
+   "id": "9defa017",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61038421",
+   "id": "69734c34",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e27b0b95",
+   "id": "c2f00622",
    "metadata": {
     "hide-output": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "417a662c",
+   "id": "de67747b",
    "metadata": {},
    "source": [
     "Here we go"
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7ddea09",
+   "id": "1a2888e0",
    "metadata": {
     "hide-output": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddeb17cd",
+   "id": "2662cecd",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90b5af44",
+   "id": "4629abd3",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f52238b9",
+   "id": "9b1ccdcc",
    "metadata": {
     "hide-output": false
    },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00ec605e",
+   "id": "4596a3fa",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d171f81",
+   "id": "4587ca15",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47fafde5",
+   "id": "57ec59f9",
    "metadata": {
     "hide-output": false
    },
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76cc967a",
+   "id": "fb49feee",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5cae8e6",
+   "id": "1f3cc0b3",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42eb8884",
+   "id": "bf6e0ad7",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80e4ba3d",
+   "id": "beba940c",
    "metadata": {
     "hide-output": false
    },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c84c3ba",
+   "id": "94e82836",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b1a4dd5",
+   "id": "adc1cdc4",
    "metadata": {
     "hide-output": false
    },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f4b42f9",
+   "id": "3c2c5f3c",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0af14d61",
+   "id": "b9fc331f",
    "metadata": {
     "hide-output": false
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acd07160",
+   "id": "3484afde",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d037cb0f",
+   "id": "c1f9969f",
    "metadata": {
     "hide-output": false
    },
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e30bbd4",
+   "id": "aeae049c",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27e227ac",
+   "id": "bed22133",
    "metadata": {
     "hide-output": false
    },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be882e94",
+   "id": "a7a71cea",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "273dfbe1",
+   "id": "c95e713f",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0832f9d0",
+   "id": "be2518fd",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e28d00d4",
+   "id": "1db53725",
    "metadata": {},
    "source": [
     "## Exercise 4.1\n",
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c19ca3e0",
+   "id": "485ceae9",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29c1f0ee",
+   "id": "0d41287d",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cc23ce3",
+   "id": "34c4bd9d",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bca25e7",
+   "id": "7e621686",
    "metadata": {
     "hide-output": false
    },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "951f759b",
+   "id": "4aa43c0e",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d1a36c2",
+   "id": "55f56b38",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28c899bd",
+   "id": "2af0baf9",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bf602d2",
+   "id": "55b3f913",
    "metadata": {
     "hide-output": false
    },
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71317bd0",
+   "id": "9da0ba29",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83aa251c",
+   "id": "5f62bf21",
    "metadata": {
     "hide-output": false
    },
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c153d50e",
+   "id": "cb578056",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db120675",
+   "id": "da62e661",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa81f2b7",
+   "id": "e4ef37fb",
    "metadata": {
     "hide-output": false
    },
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7d7c6d1",
+   "id": "45dd5415",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "092f1b06",
+   "id": "ed61fb05",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bb875be",
+   "id": "7f18d5f1",
    "metadata": {},
    "source": [
     "## Exercise 4.2\n",
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea43b64b",
+   "id": "5f9a2479",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52f0463a",
+   "id": "6d43ccf5",
    "metadata": {
     "hide-output": false
    },
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4f40f4a",
+   "id": "5cebf831",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -845,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdb03915",
+   "id": "ba125bcc",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "882bde8f",
+   "id": "87fcdd52",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0eee3a4",
+   "id": "b19231f2",
    "metadata": {
     "hide-output": false
    },
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "177fd8c7",
+   "id": "36f9efe8",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -896,7 +896,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815079.9567623,
+  "date": 1768362174.9997978,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
