--- a/troubleshooting.ipynb
+++ b/troubleshooting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bc794f24",
+   "id": "95112e4d",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10aa7cb6",
+   "id": "510b1d58",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1f1b1f7",
+   "id": "68f76f85",
    "metadata": {},
    "source": [
     "# Troubleshooting\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "200e1d54",
+   "id": "4c327e08",
    "metadata": {},
    "source": [
     "## Fixing Your Local Environment\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30431ef6",
+   "id": "1aa920e6",
    "metadata": {},
    "source": [
     "## Reporting an Issue\n",
@@ -91,7 +91,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815080.1492803,
+  "date": 1768362175.189867,
   "filename": "troubleshooting.md",
   "kernelspec": {
    "display_name": "Python",
