--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8f2cd61b",
+   "id": "10170c69",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a74a444",
+   "id": "a13ceea9",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cdc3219",
+   "id": "5dc3f4c0",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with access to a GPU.\n",
+    "This lecture was built using a machine with access to a GPU — although it will also run without one.\n",
     "\n",
     "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
     "that you can access as follows:\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d17a2b0",
+   "id": "e94361c4",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13c2e4d9",
+   "id": "65ef6ee5",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c657d2c4",
+   "id": "b2c46c30",
    "metadata": {
     "hide-output": false
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1522755e",
+   "id": "c2e2e9cb",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30cf7c98",
+   "id": "c0e7e637",
    "metadata": {
     "hide-output": false
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b50cda8",
+   "id": "4b584e58",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8a0af33",
+   "id": "9bf2ae0b",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f68e5223",
+   "id": "bb61ebbb",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d165ea25",
+   "id": "114518c2",
    "metadata": {
     "hide-output": false
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49b43356",
+   "id": "f45210f0",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51cd5df7",
+   "id": "c7920642",
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ebf2807",
+   "id": "ff6dd584",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a2a49f6",
+   "id": "376da892",
    "metadata": {
     "hide-output": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c5c4b93",
+   "id": "d0b67dde",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be7a4320",
+   "id": "1af20193",
    "metadata": {
     "hide-output": false
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2c9087e",
+   "id": "63f879bd",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be2787dd",
+   "id": "ecb43910",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f858d26",
+   "id": "54480844",
    "metadata": {
     "hide-output": false
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c70ffa8c",
+   "id": "a61f6d07",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f71515f6",
+   "id": "4330e664",
    "metadata": {
     "hide-output": false
    },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d609cb6",
+   "id": "bafe5030",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24a8960d",
+   "id": "6f33501f",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abf7ebd4",
+   "id": "7b857d36",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d28eff5",
+   "id": "c03ba99a",
    "metadata": {
     "hide-output": false
    },
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc6c6302",
+   "id": "37b455de",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c593116e",
+   "id": "33a6c54a",
    "metadata": {
     "hide-output": false
    },
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df087a98",
+   "id": "3b2830e8",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d340ee2",
+   "id": "fb301b3e",
    "metadata": {
     "hide-output": false
    },
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2225dac1",
+   "id": "5eb1d65c",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8ee41ea",
+   "id": "13deef2b",
    "metadata": {
     "hide-output": false
    },
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0076c9a4",
+   "id": "4c79940c",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56593c6e",
+   "id": "54170586",
    "metadata": {
     "hide-output": false
    },
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "795d581c",
+   "id": "3b02cd75",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94fcfffa",
+   "id": "bfd74888",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4290c11",
+   "id": "f22748f9",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "978af082",
+   "id": "5db9af0d",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c499c897",
+   "id": "b409aacd",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea248158",
+   "id": "509e544d",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc4a4f18",
+   "id": "65886af2",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f43c4cc",
+   "id": "6508d349",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca76312e",
+   "id": "fff04471",
    "metadata": {
     "hide-output": false
    },
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4706e84a",
+   "id": "1418e7ea",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4b4dcec",
+   "id": "6b945c0f",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cb381ff",
+   "id": "daf79450",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e45ec301",
+   "id": "032e5655",
    "metadata": {
     "hide-output": false
    },
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c2281ae",
+   "id": "312eacf6",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6d8ece1",
+   "id": "bd51785d",
    "metadata": {
     "hide-output": false
    },
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55336cb3",
+   "id": "9687362c",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ff17d42",
+   "id": "ce4af1a1",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70d68984",
+   "id": "5eb4084a",
    "metadata": {
     "hide-output": false
    },
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b920fdad",
+   "id": "c71b576c",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1edae798",
+   "id": "0029aa56",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d191334",
+   "id": "ad9346da",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03ce18c7",
+   "id": "e472a6fc",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34f1b7f1",
+   "id": "4dbba45c",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -1011,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "328904ab",
+   "id": "d9018e50",
    "metadata": {
     "hide-output": false
    },
@@ -1032,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fa18a60",
+   "id": "86f33bd4",
    "metadata": {
     "hide-output": false
    },
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55e3d858",
+   "id": "1a2500ab",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "468dc555",
+   "id": "6ed163f4",
    "metadata": {
     "hide-output": false
    },
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08f70320",
+   "id": "3c2eef7a",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bcbdf3a",
+   "id": "b2cccb43",
    "metadata": {
     "hide-output": false
    },
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46e9acd2",
+   "id": "67eccb1b",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1115,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88526ea0",
+   "id": "7e2aff54",
    "metadata": {
     "hide-output": false
    },
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bddc8e0",
+   "id": "35555bc5",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad963a00",
+   "id": "c834722a",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb8ae204",
+   "id": "89e63c97",
    "metadata": {
     "hide-output": false
    },
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "228ba7f6",
+   "id": "6b6e00f7",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0dec907",
+   "id": "03d7a026",
    "metadata": {
     "hide-output": false
    },
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61a8d5b6",
+   "id": "36ed79ab",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d3a9425",
+   "id": "36d2c3d2",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1220,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "247e0bfd",
+   "id": "976c2736",
    "metadata": {
     "hide-output": false
    },
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "830b87f9",
+   "id": "21d520a7",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ee92d9a",
+   "id": "6b79fe33",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -1252,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bd73096",
+   "id": "f814706d",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8840554f",
+   "id": "a64d04af",
    "metadata": {
     "hide-output": false
    },
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f95e8ac4",
+   "id": "5fd1f2dc",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "190ee463",
+   "id": "930154d6",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -1329,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81684dc9",
+   "id": "feb2675e",
    "metadata": {
     "hide-output": false
    },
@@ -1368,7 +1368,7 @@
   }
  ],
  "metadata": {
-  "date": 1766815080.183025,
+  "date": 1768362175.2230284,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
